[package]
name = "chdb"
version = "0.1.2"
edition = "2021"
description = "Use clickhouse as library (chdb)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fixcik/chdb-rs"
keywords = ["chdb", "libchdb", "clickhouse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chdb-bindings-rs = "0.1.5"
enum2str = "0.1.9"
